load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

gazelle(
    name = "gazelle",
    external = "external",
    prefix = "github.com/rickypai/jenkins-stats",
)

buildifier(
    name = "buildifier",
)

load("@com_github_atlassian_bazel_tools//goimports:def.bzl", "goimports")

goimports(
    name = "goimports",
    display_diffs = True,
    prefix = "github.com/rickypai/jenkins-stats",
    write = True,
)
